{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 49,
  "lineage": "98d4628d-c1c3-d841-961b-ea6eeebf682c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:vpc/vpc-0f46851fb5e1f0d75",
            "cidr_block": "10.254.148.0/25",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-042c2223350c9b99c",
                "cidr_block": "10.254.148.0/25",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0470db8b2bd41e483",
                "cidr_block": "10.254.148.128/25",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0766e9ec1c789c661",
                "cidr_block": "10.254.0.0/20",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8eaea4e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f46851fb5e1f0d75",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0273b07cd93791d51",
            "owner_id": "921042051488",
            "tags": {
              "Name": "BDI-Prd-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "data_viz_metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Data-Viz-Metabase/ffd15a25944480d3",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Data-Viz-Metabase/ffd15a25944480d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Data-Viz-Metabase/ffd15a25944480d3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Prd-TG-Data-Viz-Metabase",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-ETL/98a6fc0d5df81235",
            "arn_suffix": "targetgroup/BDI-Prd-TG-ETL/98a6fc0d5df81235",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-ETL/98a6fc0d5df81235",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Prd-TG-ETL",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Kong/d1760078771cc635",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Kong/d1760078771cc635",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Kong/d1760078771cc635",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Prd-TG-Kong",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "neo4j-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-HTTP/20a0ef3c3d2cb675",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Neo4j-HTTP/20a0ef3c3d2cb675",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-HTTP/20a0ef3c3d2cb675",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Prd-TG-Neo4j-HTTP",
            "port": 10001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "neo4j-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "General",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-General/85fcf3fbdf1376ec",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Neo4j-General/85fcf3fbdf1376ec",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-General/85fcf3fbdf1376ec",
            "lambda_multi_value_headers_enabled": false,
            "name": "BDI-Prd-TG-Neo4j-General",
            "port": 10002,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "OM",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-OM/927755ea0ed7365b",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Neo4j-OM/927755ea0ed7365b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-OM/927755ea0ed7365b",
            "lambda_multi_value_headers_enabled": false,
            "name": "BDI-Prd-TG-Neo4j-OM",
            "port": 12002,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "Sport",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-Sport/b71d63eae6bb5a0e",
            "arn_suffix": "targetgroup/BDI-Prd-TG-Neo4j-Sport/b71d63eae6bb5a0e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Neo4j-Sport/b71d63eae6bb5a0e",
            "lambda_multi_value_headers_enabled": false,
            "name": "BDI-Prd-TG-Neo4j-Sport",
            "port": 11002,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tagging2-8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8000/7a87746bc2b81cdc",
            "arn_suffix": "targetgroup/BDI-Dev-TG-Tagging2-8000/7a87746bc2b81cdc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8000/7a87746bc2b81cdc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Dev-TG-Tagging2-8000",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tagging2-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8080/4acdeb6747839070",
            "arn_suffix": "targetgroup/BDI-Dev-TG-Tagging2-8080/4acdeb6747839070",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8080/4acdeb6747839070",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "BDI-Dev-TG-Tagging2-8080",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "data_viz_metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Data-Viz-Metabase/ffd15a25944480d3-20221011083934155300000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Data-Viz-Metabase/ffd15a25944480d3",
            "target_id": "i-0231b6ca6644560e7"
          },
          "dependencies": [
            "aws_lb_target_group.data_viz_metabase",
            "data.aws_vpc.selected",
            "module.ec2_data_viz.aws_instance.this",
            "module.ec2_data_viz_security_group.aws_security_group.this",
            "module.ec2_data_viz_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-ETL/98a6fc0d5df81235-20211230072950595300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-ETL/98a6fc0d5df81235",
            "target_id": "i-03329879064afd0eb"
          },
          "dependencies": [
            "module.ec2_etl_security_group.aws_security_group.this",
            "module.ec2_etl_security_group.aws_security_group.this_name_prefix",
            "aws_lb_target_group.etl",
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_etl.aws_instance.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Kong/d1760078771cc635-20210524122538913200000001",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Prd-TG-Kong/d1760078771cc635",
            "target_id": "i-012c34b91f79583c4"
          },
          "dependencies": [
            "aws_lb_target_group.kong",
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_kong.aws_instance.this",
            "module.kong_security_group.aws_security_group.this",
            "module.kong_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tagging2-8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8000/7a87746bc2b81cdc-20220516035203751200000001",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8000/7a87746bc2b81cdc",
            "target_id": "i-0194f5d819f0aa2ee"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.ec2_tagging2.aws_instance.this",
            "aws_lb_target_group.tagging2-8000",
            "data.aws_subnet_ids.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tagging2-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8080/4acdeb6747839070-20220516035203824800000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:921042051488:targetgroup/BDI-Dev-TG-Tagging2-8080/4acdeb6747839070",
            "target_id": "i-0194f5d819f0aa2ee"
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "module.ec2_tagging2.aws_instance.this",
            "aws_lb_target_group.tagging2-8080"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0f3e051d29b54b07d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 300,
                "snapshot_id": "snap-0ac92a6110c6da05a",
                "throughput": 0,
                "volume_id": "vol-053b6c56530a5fef5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-ecr",
            "id": "i-0f3e051d29b54b07d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1368ed03848d372",
            "private_dns": "ip-10-254-148-187.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.187",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-00c4dd58cdf26afbe",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Name": "cicd"
            },
            "tags_all": {
              "Name": "cicd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "cicd"
            },
            "vpc_security_group_ids": [
              "sg-099fc39d4bc84783e"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_data_viz",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf574497ee9bc48",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0231b6ca6644560e7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0231b6ca6644560e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.large",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfa1f64fac5a30d6",
            "private_dns": "ip-10-254-148-71.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-00e615d253d22845d",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007c00e21423ab7a8",
            "tags": {
              "Name": "BDI-Prd-Data-Visualization"
            },
            "tags_all": {
              "Name": "BDI-Prd-Data-Visualization"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Data-Visualization"
            },
            "vpc_security_group_ids": [
              "sg-084bd09fe647cab90"
            ]
          },
          "dependencies": [
            "module.ec2_data_viz_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected",
            "module.ec2_data_viz_security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_data_viz_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-084bd09fe647cab90",
            "description": "This is a security group for Data Visualization Tools",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084bd09fe647cab90",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.254.0.0/16"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-Data-Visualization-SG-20221011083919186900000001",
            "name_prefix": "BDI-Prd-Data-Visualization-SG-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-Data-Visualization-SG"
            },
            "tags_all": {
              "Name": "BDI-Prd-Data-Visualization-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_data_viz_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-931312519",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-084bd09fe647cab90",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_data_viz_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected",
            "module.ec2_data_viz_security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_data_viz_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.254.0.0/16"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1196657293",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-084bd09fe647cab90",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_data_viz_security_group.aws_security_group.this",
            "module.ec2_data_viz_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_es[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0c84c479166c291cc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0824e790e49c37877",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c84c479166c291cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04544d5abb3e0889d",
            "private_dns": "ip-10-254-148-152.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "ES-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-0fc4e194728e06ae0",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-one",
              "Owner": "VinBDI"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-one",
              "Owner": "VinBDI"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_es[\"three\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0b748cc91cf668dcb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-031fdb696028c5f3b",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b748cc91cf668dcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034f4e093d8e8e06f",
            "private_dns": "ip-10-254-148-230.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "ES-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-0adbc20a269538f6c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-three",
              "Owner": "VinBDI"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-three",
              "Owner": "VinBDI"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_es[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-053e471c00fe49c29",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-084d9bf7bd8d9c10a",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053e471c00fe49c29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0673a7f9864d72961",
            "private_dns": "ip-10-254-148-151.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "ES-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-091a4fa0636bb55e8",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-two",
              "Owner": "VinBDI"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Elasticsearch-two",
              "Owner": "VinBDI"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_es_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-0eed885cde307ea1f",
            "description": "This is a security group for Elasticsearch cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eed885cde307ea1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-SG-Elasticsearch-20211014042545065000000001",
            "name_prefix": "BDI-Prd-SG-Elasticsearch-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-SG-Elasticsearch"
            },
            "tags_all": {
              "Name": "BDI-Prd-SG-Elasticsearch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_es_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-967518154",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0eed885cde307ea1f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_es_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2047264091",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0eed885cde307ea1f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_etl",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-03329879064afd0eb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "BDI-Prd-Role-InstanceAccess",
            "id": "i-03329879064afd0eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db25620570c6e6c8",
            "private_dns": "ip-10-254-148-238.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091dab124a7f6e916",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-ETL"
            },
            "tags_all": {
              "Name": "BDI-Prd-ETL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-ETL"
            },
            "vpc_security_group_ids": [
              "sg-0f6639785c7e46dce"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_etl_security_group.aws_security_group.this",
            "module.ec2_etl_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_etl_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-0f6639785c7e46dce",
            "description": "This is a security group for ETL stuffs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6639785c7e46dce",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.254.148.0/24"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-ETL-SG-20211230071452060100000001",
            "name_prefix": "BDI-Prd-ETL-SG-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-ETL-SG"
            },
            "tags_all": {
              "Name": "BDI-Prd-ETL-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_etl_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-101077789",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6639785c7e46dce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_etl_security_group.aws_security_group.this",
            "module.ec2_etl_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_etl_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.254.148.0/24"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-309376752",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f6639785c7e46dce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_etl_security_group.aws_security_group.this",
            "module.ec2_etl_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kafka[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0d208ba53660983cc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-070698df8958be138",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d208ba53660983cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd9142aec6e52e2a",
            "private_dns": "ip-10-254-148-178.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Kafka-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-0e669c09d530d4f4a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-one",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-one",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "module.ec2_es_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kafka[\"three\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0dde304fe6f813a76",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0b8c582b05339fdbf",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dde304fe6f813a76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e99eaee4318d1da",
            "private_dns": "ip-10-254-148-136.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Kafka-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-04a3033e58e81eaf5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-three",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-three",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kafka[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05285e7f778920923",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0291817f19488523f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-01c9dc26614aac119",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0291817f19488523f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06b72e83b45168335",
            "private_dns": "ip-10-254-148-177.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Kafka-Root-block"
                },
                "throughput": 0,
                "volume_id": "vol-00e8db0b6dd691d34",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-two",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tags_all": {
              "Environment": "Prd",
              "Name": "BDI-Prd-Kafka-two",
              "Owner": "VinBDI",
              "Service": "Kafka"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "vpc_security_group_ids": [
              "sg-0eed885cde307ea1f"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_es_security_group.aws_security_group.this",
            "module.ec2_es_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kafka_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-073f21a9f96c39d01",
            "description": "This is a security group for Kafka cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073f21a9f96c39d01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-SG-Kafka-20211015062926104800000001",
            "name_prefix": "BDI-Prd-SG-Kafka-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-SG-Kafka"
            },
            "tags_all": {
              "Name": "BDI-Prd-SG-Kafka"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_kafka_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1753930137",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-073f21a9f96c39d01",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_kafka_security_group.aws_security_group.this",
            "module.ec2_kafka_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kafka_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3562011322",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-073f21a9f96c39d01",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_kafka_security_group.aws_security_group.this",
            "module.ec2_kafka_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kong",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-012c34b91f79583c4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012c34b91f79583c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08540570652d6786d",
            "private_dns": "ip-10-254-148-217.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-08c869be4c2754b2e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Kong"
            },
            "tags_all": {
              "Name": "BDI-Prd-Kong"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "BDI-Prd-Kong"
            },
            "vpc_security_group_ids": [
              "sg-0537a8f0fb6da09d2"
            ]
          },
          "dependencies": [
            "module.kong_security_group.aws_security_group.this",
            "module.kong_security_group.aws_security_group.this_name_prefix",
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kong_control_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-00722072c2c397fe9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "BDI-Prd-Role-InstanceAccess",
            "id": "i-00722072c2c397fe9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08979a48be88d4405",
            "private_dns": "ip-10-254-148-228.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0ba269f544a9bd3f8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Kong-CP"
            },
            "tags_all": {
              "Name": "BDI-Prd-Kong-CP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Kong-CP"
            },
            "vpc_security_group_ids": [
              "sg-0c314d8455bbe51f4"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.kong_cluster_security_group.aws_security_group.this",
            "module.kong_cluster_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_kong_data_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-05da81424cc9b6c4f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "BDI-Prd-Role-InstanceAccess",
            "id": "i-05da81424cc9b6c4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9287efcf5b37e6f",
            "private_dns": "ip-10-254-148-162.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-083d7e3e02d5e3b33",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Name": "BDI-Prd-Kong-DP-1"
            },
            "tags_all": {
              "Name": "BDI-Prd-Kong-DP-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Kong-DP-1"
            },
            "vpc_security_group_ids": [
              "sg-0c314d8455bbe51f4"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.kong_cluster_security_group.aws_security_group.this",
            "module.kong_cluster_security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-08fd5cae8260414e6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "BDI-Prd-Role-InstanceAccess",
            "id": "i-08fd5cae8260414e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c4f635bbc2cc1cc",
            "private_dns": "ip-10-254-148-169.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0f0f4e31b10559fb4",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Name": "BDI-Prd-Kong-DP-2"
            },
            "tags_all": {
              "Name": "BDI-Prd-Kong-DP-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Kong-DP-2"
            },
            "vpc_security_group_ids": [
              "sg-0c314d8455bbe51f4"
            ]
          },
          "dependencies": [
            "module.kong_cluster_security_group.aws_security_group.this",
            "module.kong_cluster_security_group.aws_security_group.this_name_prefix",
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongodb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-07762fb2369d470dd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0ff8ac7c4f0585608",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07762fb2369d470dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e632e0376f17f767",
            "private_dns": "ip-10-254-148-245.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e475a5c64cabe810",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-1"
            },
            "tags_all": {
              "Name": "BDI-Prd-Tagging-MongoDB-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-1"
            },
            "vpc_security_group_ids": [
              "sg-099fc39d4bc84783e"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "data.aws_subnet_ids.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0b078c6f0e9657147",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0f7302fbb4ad1ca64",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b078c6f0e9657147",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00aa5f9372bd89d87",
            "private_dns": "ip-10-254-148-236.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00066ee4344608f3d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-2"
            },
            "tags_all": {
              "Name": "BDI-Prd-Tagging-MongoDB-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-2"
            },
            "vpc_security_group_ids": [
              "sg-099fc39d4bc84783e"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-03d0bbfec5690861a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0ef8ef9c89784f258",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d0bbfec5690861a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecd26bace256f30d",
            "private_dns": "ip-10-254-148-199.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fb9cbedec3f32ad",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-3"
            },
            "tags_all": {
              "Name": "BDI-Prd-Tagging-MongoDB-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Tagging-MongoDB-3"
            },
            "vpc_security_group_ids": [
              "sg-099fc39d4bc84783e"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_neo4j_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-033ea2fd0b49c374e",
            "description": "This is a security group for Neo4j",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033ea2fd0b49c374e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.254.0.0/16"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-SG-Neo4j-20211015073308656600000001",
            "name_prefix": "BDI-Prd-SG-Neo4j-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-SG-Neo4j"
            },
            "tags_all": {
              "Name": "BDI-Prd-SG-Neo4j"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_neo4j_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-77529554",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-033ea2fd0b49c374e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_neo4j_security_group.aws_security_group.this",
            "module.ec2_neo4j_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_neo4j_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.254.0.0/16"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1951283416",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-033ea2fd0b49c374e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.ec2_neo4j_security_group.aws_security_group.this",
            "module.ec2_neo4j_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-099fc39d4bc84783e",
            "description": "This is a security group for CICD stuffs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099fc39d4bc84783e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02ef8bcf88c4c4a7e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd_sg-20210419082625570200000001",
            "name_prefix": "cicd_sg-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd_sg"
            },
            "tags_all": {
              "Name": "cicd_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3226930886",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-099fc39d4bc84783e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-972012820",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-099fc39d4bc84783e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_tagging2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0194f5d819f0aa2ee",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0194f5d819f0aa2ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030ea06e3bb571112",
            "private_dns": "ip-10-254-148-221.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0d5288fa4cddd8f2e",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ef14d8e1de05c1",
            "tags": {
              "Name": "BDI-Prd-Tagging2"
            },
            "tags_all": {
              "Name": "BDI-Prd-Tagging2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "BDI-Prd-Tagging2"
            },
            "vpc_security_group_ids": [
              "sg-099fc39d4bc84783e"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.selected",
            "data.aws_vpc.selected",
            "module.ec2_security_group.aws_security_group.this",
            "module.ec2_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025d3681e70162e13",
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:instance/i-0a565ebcd8b746fb6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-ecr",
            "id": "i-0a565ebcd8b746fb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BDI-Prd-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00140b1569ef1fbed",
            "private_dns": "ip-10-254-148-146.ap-southeast-1.compute.internal",
            "private_ip": "10.254.148.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "throughput": 0,
                "volume_id": "vol-0b2ad480bc5e04591",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09859e24c07cdc9c7",
            "tags": {
              "Name": "cicd-agent-staging"
            },
            "tags_all": {
              "Name": "cicd-agent-staging"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "cicd-agent-staging"
            },
            "vpc_security_group_ids": [
              "sg-0b9fd5f853d1554f1"
            ]
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "module.jenkins_slave_security_group.aws_security_group.this",
            "module.jenkins_slave_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-0b9fd5f853d1554f1",
            "description": "This is a security group for Jenkins Slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9fd5f853d1554f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.254.0.0/16"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins_slave_sg-20221103074918450800000001",
            "name_prefix": "jenkins_slave_sg-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_slave_sg"
            },
            "tags_all": {
              "Name": "jenkins_slave_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slave_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3982044162",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b9fd5f853d1554f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.jenkins_slave_security_group.aws_security_group.this",
            "module.jenkins_slave_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slave_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.254.0.0/16"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2642941192",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b9fd5f853d1554f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.jenkins_slave_security_group.aws_security_group.this",
            "module.jenkins_slave_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.kong_cluster_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-0c314d8455bbe51f4",
            "description": "Security Group for Kong Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c314d8455bbe51f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.254.0.0/20"
                ],
                "description": "Allow from eks subnet",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8100
              },
              {
                "cidr_blocks": [
                  "10.254.148.0/24"
                ],
                "description": "Allow from legacy subnet",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8100
              },
              {
                "cidr_blocks": [],
                "description": "Allow Konga from ALB",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054dbee04c06dd9c3"
                ],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "Allow from Jump",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02ef8bcf88c4c4a7e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "BDI-Prd-SG-Kong-Cluster-20211124051607011900000001",
            "name_prefix": "BDI-Prd-SG-Kong-Cluster-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BDI-Prd-SG-Kong-Cluster"
            },
            "tags_all": {
              "Name": "BDI-Prd-SG-Kong-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kong_cluster_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2013728710",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c314d8455bbe51f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.kong_cluster_security_group.aws_security_group.this",
            "module.kong_cluster_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.kong_cluster_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2598695454",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c314d8455bbe51f4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.kong_cluster_security_group.aws_security_group.this",
            "module.kong_cluster_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.kong_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:921042051488:security-group/sg-0537a8f0fb6da09d2",
            "description": "This is a security group for KONG stuffs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0537a8f0fb6da09d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kong_sg-20210510035550858400000002",
            "name_prefix": "kong_sg-",
            "owner_id": "921042051488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kong_sg"
            },
            "tags_all": {
              "Name": "kong_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f46851fb5e1f0d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kong_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3265743528",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0537a8f0fb6da09d2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.kong_security_group.aws_security_group.this",
            "module.kong_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.kong_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1860250636",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0537a8f0fb6da09d2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.kong_security_group.aws_security_group.this",
            "module.kong_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}